update week4
